# Website

./: .buildpacks  .dockerignore  .env.template  .gitignore  .p10k.zsh  .tmux.conf  .travis.yml  .zshenv  10  :w  ;w  Dockerfile  Dockerfile_alpine  Makefile  Pipfile  Pipfile2  Pipfile3  Procfile  README.md  ]  alacritty.yml  alias.sh  aliases.sh  cert.pem  commands.yml  config.yml  dev.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  exports.sh  false  false.zwc  fdp  functions.sh  heroku.yml  index.js  key.pem  main.sh  main.sh.zwc  (+9 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  docker-build-test.yml  docker-image.yml  docker-publish.yml  docker-push.yml  pylint.yml
api/: admin.py  forms.py  models.py  models.py.3840c2506362440667b85b89a668a44e.py  urls.py  views.py
api/migrations/: 0001_initial.py  0003_datamodel.py
article/: adapt.py  context.py  forms.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_auto_20201129_2343.py  0002_auto_20210127_0002.py  0003_auto_20210125_2038.py  0003_auto_20210127_0002.py  0004_auto_20210127_0029.py  0005_auto_20210127_0042.py  0006_auto_20210127_0109.py  0007_auto_20210127_0120.py  0008_article_update_count.py  0009_article_dislike_count.py  0010_article_layout.py
blog/: models.py  urls.py  views.py
business/: text.yaml  urls.py  views.py
cdn/: urls.py  views.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
demo/: models.py  urls.py  views.py
design/: apps.py  urls.py  views.py
django_project/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
editor/: consumers.py  models.py  routing.py  urls.py  views.py
file/: views.py
first_site/: apps.py  urls.py  views.py
gallery/: urls.py  views.py
game/: admin.py  models.py  urls.py  views.py
games/: models.py  urls.py  views.py
home/: context.py  forms.py  models.py  tests.py  urls.py  views.py
installs/: start.sh  update.sh
isep/: apps.py  urls.py  views.py
planning/: urls.py  views.py
project/: models.py  urls.py  views.py
projects/: urls.py  views.py
staticfiles/: staticfiles.json  style.0eea43131243.css  touch-typing.css
test/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
tests/: urls.py  views.py
todo/: README.md  forms.py  models.py  urls.py  views.py
touch_typing/: apps.py  urls.py  views.py
url/: models.py  urls.py  views.py
users/: forms.py  models.py  urls.py  views.py
website/: entrypoint.sh  manage.py
(+697 files in other folders)
