[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
django-heroku = "^0.3.1"
channels = "^3.0.4"
django-storages = "^1.12.3"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.1.5"
django-allauth = "^0.50.0"
django-cors-middleware = "^1.5.0"
django-compressor = "^4.0"
django-markdown-view = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.9"
neovim = "^0.3.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
